--- a/server/macchina.properties
+++ b/server/macchina.properties
@@ -7,6 +7,20 @@ osp.data               = ${application.configDir}data
 osp.web.cacheResources = true
 
 #
+# macchina.io Demo
+#
+airvantage.username = JA347400060803
+airvantage.password = test2112
+logger.database = logger.db
+
+
+serial.device = /dev/tty.usbserial
+serial.params = 8N1
+serial.speed = 9600
+
+
+
+#
 # Logging Configuration
 #
 logging.loggers.root.channel = console
