added implementations for Tinkerforge Humidity and Barometer bricklets, added events to TemperatureSensor and AmbientLightSensor

--- a/devices/Tf/Makefile
+++ b/devices/Tf/Makefile
@@ -16,7 +16,9 @@ objects = \
 	MasterConnection \
 	MasterConnectionImpl \
 	TemperatureSensor \
+	HumiditySensor \
 	AmbientLightSensor \
+	AirPressureSensor \
 	RotaryEncoder \
 	MotionDetector \
 	BundleActivator \
