--- a/server/macchina.properties
+++ b/server/macchina.properties
@@ -2,9 +2,16 @@
 # OSP Configuration
 #
 osp.codeCache          = ${application.dir}codeCache
-osp.bundleRepository   = ${application.configDir}../platform/OSP/bundles;${application.configDir}../devices/bundles;${application.configDir}../samples/bundles
+osp.bundleRepository   = ${application.configDir}../platform/OSP/bundles;${application.configDir}../devices/bundles;${application.configDir}../webui/bundles;${application.configDir}../samples/bundles
 osp.data               = ${application.configDir}data
 osp.web.cacheResources = true
+
+#
+# Authentication
+#
+
+auth.simple.admin.passwordHash = 21232f297a57a5a743894a0e4a801fc3
+
 
 #
 # macchina.io Demo
