JSExecutor: better V8 Context handling, workaround for GC issue in JSServletExecutor, add support for arguments to WebFilterFactory/WebFilterExtensionPoint

--- a/webui/SystemInformation/Makefile
+++ b/webui/SystemInformation/Makefile
@@ -6,6 +6,8 @@
 # Makefile for System Information Bundle
 #
 
+.PHONY: clean all
+
 BUNDLE_TOOL = $(POCO_BASE)/OSP/BundleCreator/$(POCO_HOST_BINDIR)/bundle
 
 include $(POCO_BASE)/build/rules/global
@@ -13,3 +15,4 @@ include $(POCO_BASE)/build/rules/global
 all:
 	$(BUNDLE_TOOL) -o../bundles SystemInformation.bndlspec
 
+clean:
