--- a/webui/Makefile
+++ b/webui/Makefile
@@ -11,3 +11,5 @@
 clean all:
 	$(MAKE) -C Launcher $(MAKECMDGOALS)
 	$(MAKE) -C SystemInformation $(MAKECMDGOALS)
+	$(MAKE) -C Devices $(MAKECMDGOALS)
+	$(MAKE) -C BundleAdmin $(MAKECMDGOALS)
