factored out jQuery and AngularJS into separate bundles

--- a/webui/Makefile
+++ b/webui/Makefile
@@ -9,6 +9,9 @@
 .PHONY: clean all
 
 clean all:
+	$(MAKE) -C Common $(MAKECMDGOALS)
+	$(MAKE) -C jQuery $(MAKECMDGOALS)
+	$(MAKE) -C AngularJS $(MAKECMDGOALS)
 	$(MAKE) -C Launcher $(MAKECMDGOALS)
 	$(MAKE) -C SystemInformation $(MAKECMDGOALS)
 	$(MAKE) -C Devices $(MAKECMDGOALS)
