--- a/server/macchina.properties
+++ b/server/macchina.properties
@@ -9,29 +9,16 @@ osp.web.cacheResources = true
 #
 # Authentication
 #
-
 auth.simple.admin.passwordHash = 21232f297a57a5a743894a0e4a801fc3
-
-
-#
-# macchina.io Demo
-#
-airvantage.username = JA347400060803
-airvantage.password = test2112
-logger.database = logger.db
-
-
-serial.ports.1.device = /dev/tty.usbserial-A4001SYt 
-serial.ports.1.params = 8N1
-serial.ports.1.speed = 9600
-
-
 
 #
 # Logging Configuration
 #
 logging.loggers.root.channel = console
 logging.loggers.root.level = debug
+
+logging.loggers.remoting.name = RemotingNG
+logging.loggers.remoting.level = notice
 
 logging.channels.file.class = FileChannel
 logging.channels.file.pattern = %Y-%m-%d %H:%M:%S.%i [%p] %s<%I>: %t
