added Tinkerforge GPS bricklet

--- a/devices/Devices/Makefile-Library
+++ b/devices/Devices/Makefile-Library
@@ -39,6 +39,7 @@ objects = Device DeviceException \
 	SerialDeviceRemoteObject \
 	SerialDeviceServerHelper \
 	SerialDeviceSkeleton \
+	GNSSSensor \
 	IGNSSSensor \
 	GNSSSensorEventDispatcher \
 	GNSSSensorRemoteObject \
