updated config file

--- a/server/macchina.properties
+++ b/server/macchina.properties
@@ -2,33 +2,38 @@
 # OSP Configuration
 #
 osp.codeCache          = ${application.dir}codeCache
-osp.bundleRepository   = ${application.configDir}../platform/OSP/bundles;${application.configDir}../devices/bundles;${application.configDir}../webui/bundles;${application.configDir}../samples/bundles
+osp.bundleRepository   = ${application.configDir}../platform/OSP/bundles;${application.configDir}../devices/bundles;${application.configDir}../services/bundles;${application.configDir}../protocols/bundles;${application.configDir}../webui/bundles
 osp.data               = ${application.configDir}data
 osp.web.cacheResources = true
+
 
 #
 # Authentication
 #
+# Note: Password for user "admin" is "admin".
 auth.simple.admin.passwordHash = 21232f297a57a5a743894a0e4a801fc3
 
 
 #
-# macchina.io Demo
+# Serial Ports
 #
-airvantage.username = JA347400060803
-airvantage.password = test2112
-logger.database = logger.db
-
-#serial.ports.1.device = /dev/tty.usbserial-A4001SYt 
+#serial.ports.1.device = /dev/tty.usbserial 
 #serial.ports.1.params = 8N1
-#serial.ports.1.speed = 9600
+#serial.ports.1.speed = 57600
+
+
+#
+# MQTT
+#
+mqtt.clients.eclipse.serverURI = tcp://iot.eclipse.org:1883
+mqtt.clients.eclipse.id = macchina.io
 
 
 #
 # Logging Configuration
 #
 logging.loggers.root.channel = console
-logging.loggers.root.level = debug
+logging.loggers.root.level = information
 
 logging.loggers.remoting.name = RemotingNG
 logging.loggers.remoting.level = notice
@@ -42,6 +47,7 @@ logging.channels.file.purgeCount = 10
 
 logging.channels.console.class = ColorConsoleChannel
 logging.channels.console.pattern = %Y-%m-%d %H:%M:%S.%i [%p] %s<%I>: %t
+
 
 #
 # NetSSL (OpenSSL) Configuration
