--- a/devices/Makefile
+++ b/devices/Makefile
@@ -12,3 +12,4 @@ clean all:
 	$(MAKE) -C Devices $(MAKECMDGOALS)
 	$(MAKE) -C Serial $(MAKECMDGOALS)
 	$(MAKE) -C Tf $(MAKECMDGOALS)
+	$(MAKE) -C Simulation $(MAKECMDGOALS)
