--- a/platform/Makefile
+++ b/platform/Makefile
@@ -26,7 +26,7 @@ poco: libexecs $(if $(TESTS),tests) $(if $(SAMPLES),samples)
 all: libexecs tests samples
 
 INSTALLDIR = $(DESTDIR)$(POCO_PREFIX)
-COMPONENTS = Foundation XML JSON Util Net Data Data/SQLite Zip Crypto NetSSL_OpenSSL CppParser CodeGeneration JS/V8 JS/Core JS/Data JS/Bridge JS/Net RemotingNG RemotingNG/RemoteGen RemotingNG/TCP OSP OSP/BundleCreator OSP/BundleAdmin OSP/Web OSP/Core OSP/Crypto OSP/Data OSP/Data/SQLite OSP/Net OSP/NetSSL_OpenSSL OSP/SecureWebServer OSP/WebServer OSP/JS
+COMPONENTS = Foundation XML JSON Util Net Data Data/SQLite Zip Crypto NetSSL_OpenSSL CppParser CodeGeneration JS/V8 JS/Core JS/Data JS/Bridge JS/Net RemotingNG RemotingNG/RemoteGen RemotingNG/TCP OSP OSP/BundleCreator OSP/Web OSP/Core OSP/Crypto OSP/Data OSP/Data/SQLite OSP/Net OSP/NetSSL_OpenSSL OSP/SecureWebServer OSP/WebServer OSP/JS
 
 cppunit:
 	$(MAKE) -C $(POCO_BASE)/CppUnit 
@@ -60,7 +60,7 @@ libexecs += \
     WebTunnel-libexec \
     JS/V8-libexec JS/Core-libexec JS/Data-libexec JS/Bridge-libexec JS/Net-libexec \
     CodeGeneration-libexec RemotingNG-libexec RemotingNG/RemoteGen-libexec RemotingNG/TCP-libexec \
-    OSP-libexec OSP/BundleCreator-libexec OSP/BundleAdmin-libexec OSP/Web-libexec OSP/Core-libexec OSP/Crypto-libexec OSP/Data-libexec OSP/Data/SQLite-libexec OSP/Net-libexec OSP/NetSSL_OpenSSL-libexec OSP/SecureWebServer-libexec OSP/WebServer-libexec OSP/JS-libexec OSP/WebEvent-libexec OSP/SimpleAuth=libexec \
+    OSP-libexec OSP/BundleCreator-libexec OSP/Web-libexec OSP/Core-libexec OSP/Crypto-libexec OSP/Data-libexec OSP/Data/SQLite-libexec OSP/Net-libexec OSP/NetSSL_OpenSSL-libexec OSP/SecureWebServer-libexec OSP/WebServer-libexec OSP/JS-libexec OSP/WebEvent-libexec OSP/SimpleAuth-libexec \
     Geo-libexec
 tests    += CodeGeneration-tests RemotingNG-tests RemotingNG/TCP-tests OSP-tests OSP/Web-tests Geo-libexec
 samples  += WebTunnel-samples
@@ -68,7 +68,7 @@ cleans   += \
     WebTunnel-clean \
     JS/V8-clean JS/Core-clean JS/Data-clean JS/Bridge-clean JS/Net-clean \
     CodeGeneration-clean RemotingNG-clean RemotingNG/RemoteGen-clean RemotingNG/TCP-clean \
-    OSP-clean OSP/BundleCreator-clean OSP/BundleAdmin-clean OSP/Web-clean OSP/Core-clean OSP/Crypto-clean OSP/Data-clean OSP/Data/SQLite-clean OSP/Net-clean OSP/NetSSL_OpenSSL-clean OSP/SecureWebServer-clean OSP/WebServer-clean OSP/JS-clean OSP/WebEvent-clean OSP/SimpleAuth-clean \
+    OSP-clean OSP/BundleCreator-clean OSP/Web-clean OSP/Core-clean OSP/Crypto-clean OSP/Data-clean OSP/Data/SQLite-clean OSP/Net-clean OSP/NetSSL_OpenSSL-clean OSP/SecureWebServer-clean OSP/WebServer-clean OSP/JS-clean OSP/WebEvent-clean OSP/SimpleAuth-clean \
     Geo-clean
 
 .PHONY: $(libexecs)
@@ -333,12 +333,6 @@ OSP/BundleCreator-libexec:  Foundation-libexec XML-libexec Util-libexec Zip-libe
 
 OSP/BundleCreator-clean:  
 	$(MAKE) -C $(POCO_BASE)/OSP/BundleCreator clean
-
-OSP/BundleAdmin-libexec:  Net-libexec OSP-libexec OSP/Web-libexec OSP/BundleCreator-libexec
-	$(MAKE) -C $(POCO_BASE)/OSP/BundleAdmin
-
-OSP/BundleAdmin-clean:  
-	$(MAKE) -C $(POCO_BASE)/OSP/BundleAdmin clean
 
 OSP/Web-libexec:  Net-libexec OSP-libexec OSP/BundleCreator-libexec
 	$(MAKE) -C $(POCO_BASE)/OSP/Web
