improved global Makefile and configuration file, updated documentation

--- a/server/macchina.properties
+++ b/server/macchina.properties
@@ -23,14 +23,68 @@ auth.simple.admin.passwordHash = 21232f297a57a5a743894a0e4a801fc3
 
 
 #
+# Simulated Sensors
+#
+
+# A temperature sensor that starts with a value of
+# 20 °C and increments every second by 0.2 °C.
+# After 100 cycles, the temperature will reset to the
+# starting value.
+simulation.sensors.temperature1.physicalQuantity = temperature
+simulation.sensors.temperature1.physicalUnit = °C
+simulation.sensors.temperature1.initialValue = 20
+simulation.sensors.temperature1.delta = 0.2
+simulation.sensors.temperature1.cycles = 100
+simulation.sensors.temperature1.updateRate = 1
+simulation.sensors.temperature1.mode = linear
+
+# Another temperature sensor that starts with a value of
+# 25 °C and changes every 10 seconds by a random
+# value between 0 and +/- 0.5 °C.
+# After 100 cycles, the temperature will reset to the
+# starting value.
+simulation.sensors.temperature2.physicalQuantity = temperature
+simulation.sensors.temperature2.physicalUnit = °C
+simulation.sensors.temperature2.initialValue = 25
+simulation.sensors.temperature2.delta = 0.5
+simulation.sensors.temperature2.cycles = 100
+simulation.sensors.temperature2.updateRate = 0.1
+simulation.sensors.temperature2.mode = random
+
+# An ambient light sensor that updates every 2 seconds.
+simulation.sensors.ambientLight1.physicalQuantity = illuminance
+simulation.sensors.ambientLight1.physicalUnit = lx
+simulation.sensors.ambientLight1.initialValue = 100
+simulation.sensors.ambientLight1.delta = 5
+simulation.sensors.ambientLight1.cycles = 100
+simulation.sensors.ambientLight1.updateRate = 0.5
+simulation.sensors.ambientLight1.mode = linear
+
+# A humidity sensor that updates every 5 seconds.
+simulation.sensors.humidity1.physicalQuantity = humidity
+simulation.sensors.humidity1.physicalUnit = %RH
+simulation.sensors.humidity1.initialValue = 40
+simulation.sensors.humidity1.delta = 0.5
+simulation.sensors.humidity1.cycles = 20
+simulation.sensors.humidity1.updateRate = 0.2
+simulation.sensors.humidity1.mode = random
+
+
+#
 # MQTT
 #
+# Create a MQTT client that connects to the MQTT test server
+# provided by the Eclipse IoT project.
 mqtt.clients.eclipse.serverURI = tcp://iot.eclipse.org:1883
 mqtt.clients.eclipse.id = macchina.io
 
 
 #
 # Logging Configuration
+#
+# See <http://pocoproject.org/slides/110-Logging.pdf> and
+# <http://pocoproject.org/slides/185-LoggingConfiguration.pdf>
+# for more information.
 #
 logging.loggers.root.channel = console
 logging.loggers.root.level = information
@@ -52,18 +106,15 @@ logging.channels.console.pattern = %Y-%m-%d %H:%M:%S.%i [%p] %s<%I>: %t
 #
 # NetSSL (OpenSSL) Configuration
 #
-openSSL.server.privateKeyFile = ${application.configDir}any.pem
-openSSL.server.caConfig = ${application.configDir}rootcert.pem
+openSSL.server.privateKeyFile = ${application.configDir}macchina.pem
 openSSL.server.verificationMode = none
 openSSL.server.verificationDepth = 9
-openSSL.server.loadDefaultCAFile = false
+openSSL.server.loadDefaultCAFile = true
+openSSL.server.caConfig = ${application.configDir}rootcert.pem
 openSSL.server.cypherList = ALL:!ADH:!LOW:!EXP:!MD5:@STRENGTH
-openSSL.server.privateKeyPassphraseHandler.name = KeyFileHandler
-openSSL.server.privateKeyPassphraseHandler.options.password = test
 openSSL.server.invalidCertificateHandler.name = AcceptCertificateHandler
-
-openSSL.client.invalidCertificateHandler.name = AcceptCertificateHandler
-openSSL.client.caConfig = ${application.configDir}rootcert.pem
 openSSL.client.verificationMode = none
 openSSL.client.verificationDepth = 9
 openSSL.client.loadDefaultCAFile = false
+openSSL.client.caConfig = ${application.configDir}rootcert.pem
+openSSL.client.invalidCertificateHandler.name = RejectCertificateHandler
