include patch that fixes illegal instruction on Raspberry Pi

--- a/platform/JS/V8/Makefile
+++ b/platform/JS/V8/Makefile
@@ -11,7 +11,7 @@ include $(POCO_BASE)/build/rules/global
 V8VERSION = 3.25.28.18
 GYPREVISION = 1831
 V8BASE = v8-$(V8VERSION)
-V8FLAGS = library=shared snapshot=off i18nsupport=off werror=no
+V8FLAGS = library=shared snapshot=off i18nsupport=off werror=no $(EXTRA_V8FLAGS)
 
 .PHONY: v8base v8deps v8libs
 
@@ -28,11 +28,16 @@ ifeq ($(findstring arm,$(OSARCH)),arm)
 V8ARCH = arm
 endif
 ifeq ($(findstring armv7,$(OSARCH)),armv7)
-V8FLAGS += armv7=true
+V8FLAGS += arm_version=7
+endif
+ifeq ($(findstring armv6,$(OSARCH)),armv6)
+V8FLAGS += arm_version=6
 endif
 ifeq ($(findstring mipsel,$(OSARCH)),mipsel)
 V8ARCH = mipsel
 endif
+
+$(info Building V8 for arch $(V8ARCH) with flags: $(V8FLAGS))
 
 ifeq ($(V8ARCH),)
 $(error Unknown target architecture)
@@ -58,6 +63,7 @@ default: v8install
 
 $(V8BASE): archive/$(V8BASE).tar.gz
 	tar xfz $<
+	cd $(V8BASE) && patch -p1 <../patches/armv6.patch
 
 v8base: $(V8BASE)
 
@@ -65,9 +71,9 @@ v8deps: v8base
 	mkdir -p $(V8BASE)/build
 	cd $(V8BASE)/build && tar xfz ../../archive/gyp-$(GYPREVISION).tar.gz
 	
-v8libs: v8deps
+v8libs: v8deps v8patch
 
-shared_debug: v8deps
+shared_debug: v8deps 
 	-$(MAKE) -C $(V8BASE) $(V8ARCH).debug $(V8FLAGS) 
 
 shared_release: v8deps
