added cookie persistence setting

--- a/server/macchina.properties
+++ b/server/macchina.properties
@@ -5,6 +5,7 @@ osp.codeCache          = ${application.dir}codeCache
 osp.bundleRepository   = ${application.configDir}../platform/OSP/bundles;${application.configDir}../devices/bundles;${application.configDir}../services/bundles;${application.configDir}../protocols/bundles;${application.configDir}../webui/bundles
 osp.data               = ${application.configDir}data
 osp.web.cacheResources = true
+osp.web.sessionManager.cookiePersistence = transient
 
 
 #
