--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq -y g++-arm-linux-gnueabi g++-arm-linux-gnueabihf gcc-multilib
+  - sudo apt-get install -qq -y ia32-libs gcc-multilib
 
 env:
   global: 
@@ -18,11 +18,16 @@ matrix:
   include:
     - env:    TEST_NAME="gcc (make)"
       compiler: gcc
+      language: cpp
       script:
         - make -s -j2 
 
     - env:    TEST_NAME="arm-linux-gnueabihf- (make)"
       compiler: gcc
+      language: cpp
       script:
+        - curl http://macchina.io/files/arago/linux-devkit.tgz >linux-devkit.tgz
+        - tar xfz linux-devkit.tgz
         - make -s -j2 hosttools
-        - make -s -j2 CROSS_COMPILE=arm-linux-gnueabihf- POCO_TARGET_OSARCH=armv7l 
+        - export PATH=$PATH:`pwd`/linux-devkit/sysroots/i686-arago-linux/usr/bin/
+        - POCO_CONFIG=Arago LINKMODE=SHARED make -s -j8 DEFAULT_TARGET=shared_release
