--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq -y ia32-libs gcc-multilib
+  - #sudo apt-get install -qq -y 
 
 env:
   global: 
