--- a/.travis.yml
+++ b/.travis.yml
@@ -22,14 +22,11 @@ matrix:
       script:
         - make -s -j2 
 
-    - env:    TEST_NAME="arm-linux-gnueabihf- (make)"
+    - env:    TEST_NAME="arm-linux-gnueabihf-gcc (make)"
       compiler: gcc
       language: cpp
       script:
-        - pwd
-        - ls
-        - date
         - curl http://macchina.io/files/arago/linux-devkit.tgz >linux-devkit.tgz
         - tar xfz linux-devkit.tgz
         - make -s -j2 hosttools
-        - export PATH=$PATH:`pwd`/linux-devkit/sysroots/i686-arago-linux/usr/bin/ && POCO_CONFIG=Arago LINKMODE=SHARED make -s -j8 DEFAULT_TARGET=shared_release
+        - PATH=$PATH:`pwd`/linux-devkit/sysroots/i686-arago-linux/usr/bin; POCO_CONFIG=Arago LINKMODE=SHARED make -s -j2 DEFAULT_TARGET=shared_release
