--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ matrix:
       compiler: gcc
       language: cpp
       script:
-        - curl http://macchina.io/files/arago/linux-devkit.tgz >linux-devkit.tgz
-        - tar xfz linux-devkit.tgz
+        - curl http://downloads.ti.com/sitara_linux/esd/AM335xSDK/latest/exports/ti-sdk-am335x-evm-08.00.00.00-Linux-x86-Install.bin >ti-sdk-am335x-evm-08.00.00.00-Linux-x86-Install.bin
+        - ./ti-sdk-am335x-evm-08.00.00.00-Linux-x86-Install.bin --mode unattended
         - make -s -j2 hosttools DEFAULT_TARGET=shared_release
         - export PATH=$PATH:`pwd`/linux-devkit/sysroots/i686-arago-linux/usr/bin; POCO_CONFIG=Arago make -s -j2 DEFAULT_TARGET=shared_release
