--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq -y libc6-i386 lib32stdc++6 lib32z1
+  - sudo apt-get install -qq -y libc6-i386 libc6-dev-i386 lib32stdc++6 lib32z1 
 
 env:
   global: 
