--- a/devices/Makefile
+++ b/devices/Makefile
@@ -13,3 +13,4 @@ clean all:
 	$(MAKE) -C Serial $(MAKECMDGOALS)
 	$(MAKE) -C Tf $(MAKECMDGOALS)
 	$(MAKE) -C Simulation $(MAKECMDGOALS)
+	$(MAKE) -C Linux $(MAKECMDGOALS)
