add v8 build system patch: make snapshot work when cross-compiling for i386-based system

--- a/platform/JS/V8/Makefile
+++ b/platform/JS/V8/Makefile
@@ -71,6 +71,7 @@ default: v8install
 $(V8BASE): archive/$(V8BASE).tar.gz
 	tar xfz $<
 	cd $(V8BASE) && patch -p1 <../patches/armv6.patch
+	cd $(V8BASE) && patch -p1 <../patches/standalone.patch
 
 v8base: $(V8BASE)
 
