add SimulatedGNSSSensor which can play back GPX files

--- a/devices/Simulation/Makefile
+++ b/devices/Simulation/Makefile
@@ -12,11 +12,11 @@ include $(POCO_BASE)/build/rules/global
 
 INCLUDE += -I$(PROJECT_BASE)/devices/Devices/include
 
-objects = SimulatedSensor BundleActivator 
+objects = SimulatedSensor SimulatedGNSSSensor BundleActivator 
 
 target         = io.macchina.simulation
 target_version = 1
-target_libs    = IoTDevices PocoRemotingNG PocoOSP PocoUtil PocoXML PocoFoundation
+target_libs    = IoTDevices PocoRemotingNG PocoOSP PocoGeo PocoUtil PocoXML PocoFoundation
 
 postbuild      = $(BUNDLE_TOOL) -n$(OSNAME) -a$(OSARCH) -o../bundles Simulation.bndlspec
 
