added formatting (%d, %i, %f, %s, %o) to LoggerWrapper, added ConsoleWrapper implementing global console object (trace(), assert(), log(), debug(), info(), warn(), error())

--- a/platform/JS/Core/Makefile
+++ b/platform/JS/Core/Makefile
@@ -9,7 +9,7 @@
 include $(POCO_BASE)/build/rules/global
 
 objects = Wrapper PooledIsolate \
-	LoggerWrapper SystemWrapper DateTimeWrapper LocalDateTimeWrapper \
+	LoggerWrapper ConsoleWrapper SystemWrapper DateTimeWrapper LocalDateTimeWrapper \
 	ConfigurationWrapper ApplicationWrapper URIWrapper TimerWrapper \
 	JSExecutor
 
